--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "postinstall": "nuxt prepare",
     "preview": "nuxt preview",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "typecheck": "vue-tsc --noEmit"
   },
   "devDependencies": {
     "@antfu/eslint-config": "2.23.1",
@@ -28,7 +29,8 @@
     "nuxt": "^3.12.4",
     "sass": "^1.77.8",
     "unocss": "^0.61.5",
-    "vue": "^3.4.32"
+    "vue": "^3.4.32",
+    "vue-tsc": "^2.0.28"
   },
   "pnpm": {
     "peerDependencyRules": {
